--- a/css/main.css
+++ b/css/main.css
@@ -1190,6 +1190,30 @@ li {
     grid-area: 1/2/3/3;
   }
 }
+.login__grid-card__photo {
+  height: 30vh;
+  background-position-x: center;
+  background-position-y: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 6px;
+  position: relative;
+}
+@media only screen and (max-width: 68.75em) {
+  .login__grid-card__photo {
+    height: 20vh;
+  }
+}
+@media only screen and (max-width: 56.25em) {
+  .login__grid-card__photo {
+    height: 25vh;
+  }
+}
+@media only screen and (max-width: 25em) {
+  .login__grid-card__photo {
+    height: 20vh;
+  }
+}
 .login__grid--form {
   display: grid;
   grid-template-columns: 1fr;
@@ -1698,6 +1722,9 @@ li {
 }
 .cust-rincian-pesanan__rincian-transaksi--child-7 {
   grid-area: 5/1/6/2;
+  display: grid;
+  align-items: center;
+  justify-content: flex-start;
 }
 .cust-rincian-pesanan__rincian-transaksi--child-8 {
   grid-area: 5/2/6/3;
@@ -1713,7 +1740,7 @@ li {
 .cust-rincian-pesanan__pricing__parent {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(7, auto);
+  grid-template-rows: repeat(8, auto);
   grid-column-gap: 0px;
   grid-row-gap: 1.2rem;
 }
@@ -1853,6 +1880,20 @@ li {
 }
 .cust-rincian-pesanan__pricing--child-7 {
   grid-area: 7/1/8/5;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  padding: 1.8rem;
+  line-height: 2;
+}
+@media only screen and (max-width: 37.5em) {
+  .cust-rincian-pesanan__pricing--child-7 {
+    margin-bottom: 16px;
+  }
+}
+.cust-rincian-pesanan__pricing--child-8 {
+  grid-area: 8/1/9/5;
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
@@ -2080,6 +2121,7 @@ li {
   }
 }
 .cust-rincian-pesanan__button {
+  display: none;
   grid-area: 5/4/6/6;
 }
 @media only screen and (max-width: 37.5em) {
@@ -2523,6 +2565,101 @@ li {
     grid-area: 1/1/2/2;
   }
 }
+.pengelola-kamar__grid-2__form-1__listrik {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: repeat(3, 1fr);
+  grid-column-gap: 1.2rem;
+  grid-row-gap: 0px;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+@media only screen and (max-width: 56.25em) {
+  .pengelola-kamar__grid-2__form-1__listrik {
+    grid-template-rows: repeat(5, auto);
+    grid-template-columns: 1fr;
+    grid-row-gap: 12px;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .pengelola-kamar__grid-2__form-1__listrik {
+    grid-template-columns: auto 1fr;
+    grid-template-rows: repeat(3, auto);
+    grid-row-gap: 8px;
+  }
+}
+@media only screen and (max-width: 25em) {
+  .pengelola-kamar__grid-2__form-1__listrik {
+    grid-template-rows: repeat(5, auto);
+    grid-template-columns: 1fr;
+    grid-row-gap: 12px;
+  }
+}
+.pengelola-kamar__grid-2__form-1__listrik--child-1 {
+  grid-area: 1/1/2/3;
+}
+@media only screen and (max-width: 37.5em) {
+  .pengelola-kamar__grid-2__form-1__listrik--child-1 {
+    margin-bottom: 8px;
+  }
+}
+.pengelola-kamar__grid-2__form-1__listrik--child-2 {
+  grid-area: 2/1/3/2;
+}
+.pengelola-kamar__grid-2__form-1__listrik--child-3 {
+  grid-area: 2/2/3/3;
+}
+@media only screen and (max-width: 56.25em) {
+  .pengelola-kamar__grid-2__form-1__listrik--child-3 {
+    grid-area: 3/1/4/2;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .pengelola-kamar__grid-2__form-1__listrik--child-3 {
+    grid-area: 2/2/3/3;
+  }
+}
+@media only screen and (max-width: 25em) {
+  .pengelola-kamar__grid-2__form-1__listrik--child-3 {
+    grid-area: 3/1/4/2;
+  }
+}
+.pengelola-kamar__grid-2__form-1__listrik--child-4 {
+  grid-area: 3/1/4/2;
+}
+@media only screen and (max-width: 56.25em) {
+  .pengelola-kamar__grid-2__form-1__listrik--child-4 {
+    grid-area: 4/1/5/2;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .pengelola-kamar__grid-2__form-1__listrik--child-4 {
+    grid-area: 3/1/4/2;
+  }
+}
+@media only screen and (max-width: 25em) {
+  .pengelola-kamar__grid-2__form-1__listrik--child-4 {
+    grid-area: 4/1/5/2;
+  }
+}
+.pengelola-kamar__grid-2__form-1__listrik--child-5 {
+  grid-area: 3/2/4/3;
+}
+@media only screen and (max-width: 56.25em) {
+  .pengelola-kamar__grid-2__form-1__listrik--child-5 {
+    grid-area: 5/1/6/2;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .pengelola-kamar__grid-2__form-1__listrik--child-5 {
+    grid-area: 3/2/4/3;
+  }
+}
+@media only screen and (max-width: 25em) {
+  .pengelola-kamar__grid-2__form-1__listrik--child-5 {
+    grid-area: 5/1/6/2;
+  }
+}
 .pengelola-kamar__grid-2__form-2 {
   grid-area: 1/2/2/3;
   display: grid;
@@ -2896,7 +3033,7 @@ li {
     grid-template-columns: 1fr 1fr;
   }
 }
-.pengelola-pesanan--detail__child-3--template, .pengelola-pesanan-rincian--detail__child-3__desc-11, .pengelola-pesanan-rincian--detail__child-3__desc-10, .pengelola-pesanan-rincian--detail__child-3__desc-9, .pengelola-pesanan-rincian--detail__child-3__desc-8, .pengelola-pesanan-rincian--detail__child-3__desc-7, .pengelola-pesanan-rincian--detail__child-3__desc-6, .pengelola-pesanan-rincian--detail__child-3__desc-5, .pengelola-pesanan-rincian--detail__child-3__desc-4, .pengelola-pesanan-rincian--detail__child-3__desc-3, .pengelola-pesanan-rincian--detail__child-3__desc-2, .pengelola-pesanan-rincian--detail__child-3__desc-1, .pengelola-pesanan--detail__child-3__desc-9, .pengelola-pesanan--detail__child-3__desc-8, .pengelola-pesanan--detail__child-3__desc-7, .pengelola-pesanan--detail__child-3__desc-6, .pengelola-pesanan--detail__child-3__desc-5, .pengelola-pesanan--detail__child-3__desc-4, .pengelola-pesanan--detail__child-3__desc-3, .pengelola-pesanan--detail__child-3__desc-2, .pengelola-pesanan--detail__child-3__desc-1 {
+.pengelola-pesanan--detail__child-3--template, .pengelola-pesanan-rincian--detail__child-3__desc-13, .pengelola-pesanan-rincian--detail__child-3__desc-11, .pengelola-pesanan-rincian--detail__child-3__desc-10, .pengelola-pesanan-rincian--detail__child-3__desc-9, .pengelola-pesanan-rincian--detail__child-3__desc-8, .pengelola-pesanan-rincian--detail__child-3__desc-7, .pengelola-pesanan-rincian--detail__child-3__desc-6, .pengelola-pesanan-rincian--detail__child-3__desc-5, .pengelola-pesanan-rincian--detail__child-3__desc-4, .pengelola-pesanan-rincian--detail__child-3__desc-3, .pengelola-pesanan-rincian--detail__child-3__desc-2, .pengelola-pesanan-rincian--detail__child-3__desc-1, .pengelola-pesanan--detail__child-3__desc-9, .pengelola-pesanan--detail__child-3__desc-8, .pengelola-pesanan--detail__child-3__desc-7, .pengelola-pesanan--detail__child-3__desc-6, .pengelola-pesanan--detail__child-3__desc-5, .pengelola-pesanan--detail__child-3__desc-4, .pengelola-pesanan--detail__child-3__desc-3, .pengelola-pesanan--detail__child-3__desc-2, .pengelola-pesanan--detail__child-3__desc-1 {
   display: grid !important;
   align-items: center !important;
   justify-content: flex-start !important;
@@ -3185,7 +3322,7 @@ li {
   grid-area: 3/1/4/2;
   display: grid;
   grid-template-columns: 0.5fr 1fr;
-  grid-template-rows: repeat(6, auto);
+  grid-template-rows: repeat(7, auto);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
 }
@@ -3239,6 +3376,9 @@ li {
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
+}
+.pengelola-pesanan-rincian--detail__child-3__desc-13 {
+  grid-area: 7/1/8/3;
 }
 .pengelola-pesanan-rincian--detail__child-4 {
   grid-area: 4/1/5/2;
@@ -3391,13 +3531,77 @@ li {
     width: 90% !important;
   }
 }
+.pengelola-pesanan-rincian__dialog--data-diri {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr auto;
+  grid-column-gap: 0px;
+  grid-row-gap: 12px;
+}
+.pengelola-pesanan-rincian__dialog--data-diri__1 {
+  grid-area: 1/1/2/2;
+  display: grid;
+  grid-template-columns: 0.75fr 1fr;
+  grid-template-rows: repeat(7, auto);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+@media only screen and (max-width: 31.25em) {
+  .pengelola-pesanan-rincian__dialog--data-diri__1 {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+.pengelola-pesanan-rincian__dialog--data-diri__1--template, .pengelola-pesanan-rincian__dialog--data-diri__1__desc-10, .pengelola-pesanan-rincian__dialog--data-diri__1__desc-9, .pengelola-pesanan-rincian__dialog--data-diri__1__desc-8, .pengelola-pesanan-rincian__dialog--data-diri__1__desc-7, .pengelola-pesanan-rincian__dialog--data-diri__1__desc-6, .pengelola-pesanan-rincian__dialog--data-diri__1__desc-5, .pengelola-pesanan-rincian__dialog--data-diri__1__desc-4, .pengelola-pesanan-rincian__dialog--data-diri__1__desc-3, .pengelola-pesanan-rincian__dialog--data-diri__1__desc-2, .pengelola-pesanan-rincian__dialog--data-diri__1__desc-1 {
+  display: grid !important;
+  align-items: center !important;
+  justify-content: flex-start !important;
+  text-align: left;
+}
+.pengelola-pesanan-rincian__dialog--data-diri__1__desc-1 {
+  grid-area: 1/1/2/2;
+}
+.pengelola-pesanan-rincian__dialog--data-diri__1__desc-2 {
+  grid-area: 1/2/2/3;
+}
+.pengelola-pesanan-rincian__dialog--data-diri__1__desc-3 {
+  grid-area: 2/1/3/2;
+}
+.pengelola-pesanan-rincian__dialog--data-diri__1__desc-4 {
+  grid-area: 2/2/3/3;
+}
+.pengelola-pesanan-rincian__dialog--data-diri__1__desc-5 {
+  grid-area: 3/1/4/2;
+}
+.pengelola-pesanan-rincian__dialog--data-diri__1__desc-6 {
+  grid-area: 3/2/4/3;
+}
+.pengelola-pesanan-rincian__dialog--data-diri__1__desc-7 {
+  grid-area: 4/1/5/2;
+}
+.pengelola-pesanan-rincian__dialog--data-diri__1__desc-8 {
+  grid-area: 4/2/5/3;
+}
+.pengelola-pesanan-rincian__dialog--data-diri__1__desc-9 {
+  grid-area: 5/1/6/3;
+}
+.pengelola-pesanan-rincian__dialog--data-diri__1__desc-10 {
+  height: 50vh;
+  background-position-x: center;
+  background-position-y: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  grid-area: 6/1/7/3;
+}
+.pengelola-pesanan-rincian__dialog--data-diri__2 {
+  grid-area: 2/1/3/2;
+}
 
 .transaksi-unduh__grid {
   display: grid;
-  grid-template-columns: 1fr 0.5fr;
-  grid-template-rows: auto repeat(4, 1fr);
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto repeat(4, 1fr);
   grid-column-gap: 0px;
-  grid-row-gap: 0px;
+  grid-row-gap: 12px;
 }
 @media only screen and (max-width: 68.75em) {
   .transaksi-unduh__grid {
@@ -3416,8 +3620,26 @@ li {
   justify-content: flex-start;
 }
 .transaksi-unduh__child-2 {
-  grid-area: 2/1/3/2;
-  margin-top: 2.4rem;
+  grid-area: 2/1/3/3;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 12px;
+  grid-row-gap: 0px;
+}
+.transaksi-unduh__child-2__template, .transaksi-unduh__child-2__grand-2, .transaksi-unduh__child-2__grand-1 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto auto 2fr;
+  grid-row-gap: 12px;
+  grid-column-gap: 12px;
+}
+.transaksi-unduh__child-2__template-1 {
+  grid-area: 1/1/2/4;
+  text-align: left;
+}
+.transaksi-unduh__child-2__template-4 {
+  grid-area: 3/1/4/4;
 }
 .transaksi-unduh__child-3 {
   grid-area: 3/1/4/2;
@@ -3427,6 +3649,9 @@ li {
 }
 .transaksi-unduh__child-5 {
   grid-area: 5/1/6/2;
+}
+.transaksi-unduh__child-6 {
+  grid-area: 6/1/7/2;
 }
 .transaksi-unduh__tanggal {
   display: grid;
