--- a/sass/pengelola/_pengelola-cru-kamar.scss
+++ b/sass/pengelola/_pengelola-cru-kamar.scss
@@ -66,6 +66,96 @@
                 @media only screen and (max-width: $bp-small) {
                     grid-area: 1 / 1 / 2 / 2; 
                 }
+
+                &__listrik{
+                    display: grid;
+                    grid-template-columns: auto 1fr;
+                    grid-template-rows: repeat(3, 1fr);
+                    grid-column-gap: 1.2rem;
+                    grid-row-gap: 0px;
+
+                    align-items: flex-start;
+                    justify-content: flex-start;
+
+                    @media only screen and (max-width: $bp-medium) {
+                        grid-template-rows: repeat(5, auto);
+                        grid-template-columns: 1fr;
+                        grid-row-gap: 12px;
+                    }
+
+                    @media only screen and (max-width: $bp-small) {
+                        grid-template-columns: auto 1fr;
+                        grid-template-rows: repeat(3, auto);
+                        grid-row-gap: 8px;
+                    }
+
+                    @media only screen and (max-width: $bp-mobile) {
+                        grid-template-rows: repeat(5, auto);
+                        grid-template-columns: 1fr;
+                        grid-row-gap: 12px;
+                    }
+
+                    &--child-1 { 
+                        grid-area: 1 / 1 / 2 / 3; 
+                     
+                        @media only screen and (max-width: $bp-small) {
+                            margin-bottom: 8px;
+                        }
+                    }
+
+                    &--child-2 { 
+                        grid-area: 2 / 1 / 3 / 2; 
+                    }
+
+                    &--child-3 { 
+                        grid-area: 2 / 2 / 3 / 3; 
+
+                        @media only screen and (max-width: $bp-medium) {
+                            grid-area: 3 / 1 / 4 / 2; 
+                        }
+
+                        @media only screen and (max-width: $bp-small) {
+                            grid-area: 2 / 2 / 3 / 3; 
+                        }
+
+                        @media only screen and (max-width: $bp-mobile) {
+                            grid-area: 3 / 1 / 4 / 2; 
+                        }
+                    }
+
+                    &--child-4 { 
+                        grid-area: 3 / 1 / 4 / 2; 
+
+                        @media only screen and (max-width: $bp-medium) {
+                            grid-area: 4 / 1 / 5 / 2; 
+                        }
+                        
+                        @media only screen and (max-width: $bp-small) {
+                            grid-area: 3 / 1 / 4 / 2; 
+                        }
+
+                        @media only screen and (max-width: $bp-mobile) {
+                            grid-area: 4 / 1 / 5 / 2; 
+                        }
+                    }
+
+                    &--child-5 { 
+                        grid-area: 3 / 2 / 4 / 3; 
+
+                        @media only screen and (max-width: $bp-medium) {
+                            grid-area: 5 / 1 / 6 / 2; 
+                        }
+                        
+                        @media only screen and (max-width: $bp-small) {
+                            grid-area: 3 / 2 / 4 / 3; 
+                        }
+
+                        @media only screen and (max-width: $bp-mobile) {
+                            grid-area: 5 / 1 / 6 / 2; 
+                        }
+                    }
+
+                }
             }
 
             &__form-2 { 
