--- a/sass/pengelola/_pengelola-transaksi-unduh.scss
+++ b/sass/pengelola/_pengelola-transaksi-unduh.scss
@@ -1,10 +1,10 @@
 .transaksi-unduh{
     &__grid{
         display: grid;
-        grid-template-columns: 1fr 0.5fr;
-        grid-template-rows: auto repeat(4, 1fr);
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto auto repeat(4, 1fr);
         grid-column-gap: 0px;
-        grid-row-gap: 0px;
+        grid-row-gap: 12px;
 
         @media only screen and (max-width: $bp-large) {
             grid-template-columns: 1fr 0.25fr;
@@ -24,12 +24,43 @@
     }
 
     &__child-2 { 
-        grid-area: 2 / 1 / 3 / 2; 
-        margin-top: 2.4rem;
+        grid-area: 2 / 1 / 3 / 3; 
+
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr;
+        grid-column-gap: 12px;
+        grid-row-gap: 0px;
+
+        &__template{
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: auto auto 2fr;
+            grid-row-gap: 12px;
+            grid-column-gap: 12px;
+
+            &-1{
+                grid-area: 1 / 1 / 2 / 4;
+                text-align: left;
+            }
+
+            &-4{
+                grid-area: 3 / 1 / 4 / 4;
+            }
+        }
+
+        &__grand-1{
+            @extend .transaksi-unduh__child-2__template;
+        }
+        
+        &__grand-2{
+            @extend .transaksi-unduh__child-2__template;
+        }
     }
 
     &__child-3 { 
         grid-area: 3 / 1 / 4 / 2; 
+        // margin-top: 2.4rem;
     }
 
     &__child-4 { 
@@ -38,6 +69,10 @@
 
     &__child-5 { 
         grid-area: 5 / 1 / 6 / 2; 
+    }
+
+    &__child-6 { 
+        grid-area: 6 / 1 / 7 / 2; 
     }
 
     &__tanggal{
